--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http:
   crypto:
   smooth_page_indicator: ^1.1.0
+  share_plus: ^7.2.1
+  flutter_file_downloader: ^1.2.1
 
 dev_dependencies:
   flutter_test:
